Update Dockerfile (#2)
* Update Dockerfile